--- a/recipe-page-main/css/style.css
+++ b/recipe-page-main/css/style.css
@@ -1,7 +1,3 @@
-/* Widths
-- Mobile: 375px
-- Desktop: 1440px */
-
 
 /* ===============
     Global Variables 
@@ -24,16 +20,17 @@
     --fs-400: 1rem; 
 
     /* Primary Colors */
-    --clr-prime: hsl(14, 45%, 36%);          /* Nutmeg */
-    --clr-prime-accent: hsl(332, 51%, 32%);  /* Dark Raspberry */
+    --clr-prime: hsl(332, 51%, 32%);  /* Dark Raspberry */
+    --clr-prime-accent: hsl(14, 45%, 36%);          /* Nutmeg */
+    
 
     /* Neutral Colors */
-    --clr-neutral-900: hsl(24, 5%, 18%);      /* Dark Charcoal */      
-    --clr-neutral-700: hsl(30, 10%, 34%);     /* Wenge Brown */
-    --clr-neutral-400: hsl(30, 18%, 87%);     /* Light Grey */
-    --clr-neutral-300: hsl(30, 54%, 90%);     /* Eggshell */
-    --clr-neutral-200: hsl(330, 100%, 98%);   /* Rose White */
-    --clr-neutral-100: hsl(0, 0%, 100%);      /* White */
+    --clr-neutral-900: hsl(24, 5%, 18%);      /* Stone */      
+    --clr-neutral-600: hsl(30, 10%, 34%);     /* Stone */
+    --clr-neutral-150: hsl(30, 18%, 87%);     /* Stone */
+    --clr-neutral-100: hsl(30, 54%, 90%);     /* Stone */
+    --clr-neutral-50: hsl(330, 100%, 98%);   /* Rose */
+    --clr-neutral-0: hsl(0, 0%, 100%);      /* White */
 
 }
 
@@ -62,11 +59,12 @@ body {
 }
 
 body {
-    font-family: var(--ff-primary);
+    font-family: var(--ff-accent);
     font-size: var(--fs-400);
     font-weight: var(--fw-sans-normal);
-    color: var(--clr-neutral-900);
-    line-height: 1.5;
+    line-height: 150%;
+    letter-spacing: 0;
+    color: var(--clr-neutral-600);
     -webkit-font-smoothing: antialiased;
 }
 
@@ -79,6 +77,38 @@ img {
 p, h1, h2, h3, h4, h5, h6 {
     overflow-wrap: break-word;
 }
+
+/* ===============
+    Global  Typography classes
+================== */
+
+.text-preset-1 {
+    font-family: var(--ff-accent);
+    font-size: 2.5rem;
+    line-height: 100%;
+    letter-spacing: 0;
+}
+.text-preset-2 {
+    font-family: var(--ff-accent);
+    font-size: 1.75rem;
+    line-height: 100%;
+    letter-spacing: 0;
+}
+.text-preset-3 {
+    font-family: var(--ff-primary);
+    font-weight: var(--fw-sans-medium);
+    font-size: 1.25rem;
+    line-height: 100%;
+    letter-spacing: 0;
+}
+.text-preset-4-bold {
+    font-family: var(--ff-primary);
+    font-weight: var(--fw-sans-bold);
+    font-size: 1rem;
+    line-height: 150%;
+    letter-spacing: 0;
+}
+
 
 /* ===============
     Layouts  
