--- a/recipe-page-main/css/style.css
+++ b/recipe-page-main/css/style.css
@@ -71,7 +71,7 @@ body {
 img {
     max-width: 100%;
     display: block;
-    border-radius: .8rem;
+    margin-bottom: ;
 }
 
 p, h1, h2, h3, h4, h5, h6 {
@@ -87,6 +87,7 @@ p, h1, h2, h3, h4, h5, h6 {
     font-size: 2.5rem;
     line-height: 100%;
     letter-spacing: 0;
+    color: var(--clr-neutral-900);
 }
 .text-preset-2 {
     font-family: var(--ff-accent);
@@ -115,47 +116,23 @@ p, h1, h2, h3, h4, h5, h6 {
 ================== */
 
 main {
-    min-width: 1440px;
-    background-color: var(--clr-neutral-300);
     display: flex;
     justify-content: space-around;
     align-items: center;
-    /* padding-top: 123px; placeholder for alignment delete */
+    background-color: var(--clr-neutral-100);
 }
 
 .wrapper {
-    max-width: 735px;
-    background-color: var(--clr-neutral-100);
-    border-radius: 1.4rem;
-    margin: 7.6rem 0;
-    padding: 1.6rem 2.5rem 0;
+    max-width: 1600px;
+    background-color: var(--clr-neutral-0);
+    padding: 128px 48px;
 }
 
 .grid_layout {
 
     display: grid;
     grid-auto-flow: row;
-    gap: 2em;
-}
-
-
-.intro_image {
-    display: flex;
-    justify-content: center;
-    align-items: flex-end;
-    padding-top: 1rem;
-    /* margin-bottom: 1.8rem; */
-}
-
-.intro_description {
-    padding-top: 1.95rem;
-}
-
-h1 {
-    font-family: var(--ff-accent);
-    font-weight: var(--fw-sarif-normal);
-    font-size: 2.5em;
-
+    gap: 2.5em;
 }
 
 .recipe_overview {
